[tool.poetry]
name = "arxiv-sanity-lite"
version = "0.1.0"
description = ""
authors = ["nichlas rasmussen <nichlas.rasmussen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.10"
Flask = "^2.2.2"
numpy = "^1.23.4"
sqlitedict = "^2.0.0"
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
